--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@ ul {
   list-style-type: none;
 }
 
+footer {
+  margin-top: 40px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
